--- a/frontend/locales/en.json
+++ b/frontend/locales/en.json
@@ -25,7 +25,9 @@
     "new": "NEW",
     "seeAll": "See all",
     "logout": "Logout",
-    "login": "Login"
+    "login": "Login",
+    "home": "Home",
+    "stats": "Statistics"
   },
 
   "locales": {
